FELIX-6638 : Migrate WebConsole to Jakarta Servlet API